# webleank

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
tests/: test_cli.py  test_service.py  util.py
tests/cases/min_import/: Main.lean  Min.lean  lake-manifest.json  lakefile.toml
webapp/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json
webapp/src/: ControlPanel.tsx  index.css  main.tsx
webleank/: cli.py  jsonrpc.py  server.py  service.py  util.py
webleank/config/: webleank.toml
