[build-system]
requires = ["setuptools >= 69.0.3", "setuptools_scm[simple] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "webleank"
dynamic = ["version"]
description = "Link Lean sidekick web apps to LSP-enabled editors"
authors = [{name = "Castedo Ellerman", email = "castedo@castedo.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]
keywords = ["lean", "lsp", "language-server-protocol"]
dependencies = [
    "platformdirs",
    "websockets>=14.2",
]

[project.scripts]
webleank = "webleank.cli:main"

[tool.setuptools.packages.find]
include = ["webleank*"]

[tool.setuptools.package-data]
"webleank" = ["webapp/**"]

[tool.setuptools_scm]
version_file = "_version.py"

[dependency-groups]
test = [
    "pytest >= 8",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = false

[tool.ruff.lint]
ignore = [
    "E401",  # Multiple imports on one line
]
